Overflow & scrollbars fixed

--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,19 @@
     margin: 0;
 }
 
+/* *::-webkit-scrollbar {
+    overflow: overlay;
+} */
+/* *::-webkit-scrollbar-track {
+    background-color: transparent;
+}
+*::-webkit-scrollbar-thumb {
+    border-radius: 20px;
+    border: 4px solid transparent;
+    background-color: rgba(0,0,0,0.2);
+    background-clip: content-box;
+} */
+
 html {
     scroll-behavior: smooth !important;
     --scroll-behavior: smooth !important;      /*SCROLL BEHAVIOUR SMOOTH EQUIVALENT FOR SAFARI */
@@ -314,7 +327,6 @@ header {
 
 /* =============== FORMS SECTION =============== */
 .forms-section {
-    flex: 1 1 auto;
     flex: 1 1 0;
     height: 100%;
     overflow: hidden;
@@ -331,11 +343,17 @@ header {
 .forms .form {
     display: none;
     padding: 80px 2rem 2rem 80px;
-    height: 100%;
+    height: calc(100vh - var(--header-height));
     overflow: scroll;
 }
 .forms .form_1{
     display: block;
+}
+.forms .form_1,
+.forms .form_2,
+.forms .form_3,
+.forms .form_5 {
+    overflow-x: hidden;
 }
 .forms .form_3 .form-3-container {
     display: grid;
@@ -684,7 +702,6 @@ header {
 .form-4-table::-webkit-scrollbar-thumb:hover {
     background-color: rgba(0,0,0,.3);
 }
-
 
 
 
